changes in output display